# GoPiGo3

./: .gitignore  .gitmodules  .project  .readthedocs.yaml  Installation_FAQ.md  LICENSE  LICENSE.md  README.md  environment.yml  readthedocs.yml
Firmware/: check_if_firmware_update_is_needed.py  gopigo3_flash_firmware.sh  rpi1.cfg  rpi2.cfg  rpi4-sysfsgpio.cfg
Firmware/openocd/: install_openocd_compiled.sh
Hardware/: GoPiGo3 Wheel.stl
Install/: README.md  antenna_wifi.service  antenna_wifi.sh  gpg3_power.service  gpg3_power.sh  install.sh  install_scratch.sh  install_trixie.sh  list_of_serial_numbers.pkl  update_gopigo3.sh
Install/tools/: 16TickRedboardCodes.txt  remove_serial_numbers.py
Projects/BalanceBot/: BalanceBot.py  README.md  requirements.txt
Projects/BasicRobotControl/: README.md  basic_robot.py  keyboarded_robot.py  requirements.txt  run_this.py  runnable.py
Projects/CompassRobot/: README.md  compass_robot.py  requirements.txt
Projects/Connectome/: Connectome.ipynb  GoPiGo3Connectome.ipynb  GoPiGo3Connectome.py  README.md  connectome.py  requirements.txt
Projects/Empathybot/: README.md  empathybot.py  requirements.txt
Projects/IntelligentObjectAvoider/: README.md  requirements.txt  robot.py
Projects/MouseControl/: README.ipynb  README.md  mouse_control_movement.py  mouse_control_robot.ipynb  mouse_control_robot.py  requirements.txt
Projects/ObjectAvoidanceRobot/: README.md  object_avoidance_robot.py  requirements.txt
Projects/PIDLineFollower/: README.md  pid_tuner.py  requirements.txt
Projects/Pixy2LaneTracker/: Pixy2DatasetGenerator.ipynb  Pixy2LaneFollowerEfficientOnDataset.ipynb  Pixy2LaneFollowerOnDataset.ipynb  README.md  config.json  main.py  pixy2.py  pixy2_lane_follower.py  requirements.txt
Projects/Pixy2ObjectTracker/: README.md  pixy2_object_tracker.py  requirements.txt
Projects/RemoteCameraRobot/: README.md  camerarobot.service  flask_server.py  install.sh  install_startup.sh  remote_robot.py  requirements.txt
Projects/RemoteCameraRobot/complex_version/: robot_server.py  uv4l-raspicam.conf  web_server.js
Projects/RemoteCameraRobot/static/: nipplejs.js  style.css  throttle.js
Projects/RemoteCameraRobot/templates/: index.html
Projects/ServoControl/: README.md  keyboarded_robot.py  requirements.txt  run_this.py  runnable.py
Software/: gopigo3_power.py
Software/C/: CMakeLists.txt  GoPiGo3.cpp  GoPiGo3.h  GoPiGoCommon.h  gopigo3_cppConfig.cmake.in  package.xml
Software/C/Examples/: drive.cpp  grove_led.c  grove_led.cpp  i2c.c  i2c.cpp  info.c  info.cpp  led.cpp  leds.c  leds.cpp  motors.c  motors.cpp  sensors.c  sensors.cpp  servos.cpp  vbatt.cpp
Software/Csharp/: README.md
Software/Go/: readme.md
Software/Java/: LICENSE  README.md  build.gradle  config.gradle
Software/Java/gopigo3/: deploy.gradle  settings.gradle
Software/Java_new/: .gitignore
Software/NodeJS/: .eslintrc  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  install.sh  installNodejs.sh  installNvm.sh  package.json  uninstall.sh
Software/NodeJS/calibrate/: lineSensor.js
Software/NodeJS/examples/: EasyMotors.js  Grove.js  GroveBuzzer.js  Grove_I2C.js  dht.js  index.js  readInfo.js  salut.js
Software/Python/: I2C_mutex.py  README.md  easy_sensors.py  easygopigo3.py  easysensors.py  gopigo3.py  hardware_test.py  package_description.rst  pyproject.toml  setup.py
Software/Python/Examples/: Grove.py  Grove_Buzzer.py  Grove_I2C.py  Grove_IR.py  Grove_LED.py  Grove_Light_Sensor.py  Grove_US.py  Grove_US2.py  LED.py  Light_Sensor.py  Motor.py  Motor_Encoder.py  Motor_Follow.py  Motor_Position.py  Motor_Speed.py  Motor_Turn.py  Read_Info.py  Remote_Control.py  Servo.py  easyBlinkers.py  easyDexEyes.py  easyMotors.py  easy_Blinkers.py  easy_Button.py  easy_Buzzer.py  easy_DexEyes.py  easy_Distance_Sensor.py  easy_LED.py  easy_Light_Sensor.py  easy_Line_Follower.py  easy_Motors.py  gps_reading.py
Software/Python/Examples/Calibration_Panel/: calibration_panel_gui.py  gopigo3_calibration.desktop
Software/Python/Examples/Control_Panel/: control_panel_gui_3.py  gopigo3_control_panel.desktop
Software/Python/Examples/Line_Sensor/: README.md  basic_example.py  line_follower-basic_example.py  line_sensor.py
Software/Python/gopigo3/: __init__.py  easygopigo3.py  easysensors.py  gopigo3.py  requirements.txt
Software/Python/gopigo3/data/: README.md  list_of_serial_numbers.pkl
Software/Python/gopigo3/examples/: Grove.py  Grove_Buzzer.py  Grove_I2C.py  Grove_IR.py  Grove_LED.py  Grove_Light_Sensor.py  Grove_US.py  Grove_US2.py  LED.py  Motor.py  Motor_Encoder.py  Motor_Follow.py  Motor_Position.py  Motor_Speed.py  Motor_Turn.py  Read_Info.py  Remote_Control.py  Servo.py  easy_Blinkers.py  easy_Button.py  easy_Buzzer.py  easy_DexEyes.py  easy_Distance_Sensor.py  easy_LED.py  easy_Light_Sensor.py  easy_Motors.py  easy_beat.py  gps_reading.py
Software/Python/gopigo3/examples/Calibration_Panel/: calibration_panel_gui.py  gopigo3_calibration.desktop
Software/Python/gopigo3/examples/Control_Panel/: control_panel_gui_3.py  gopigo3_control_panel.desktop
Software/Python/gopigo3/examples/Line_Sensor/: README.md  basic_example.py  line_follower-basic_example.py
Software/Python/gopigo3/scripts/: __init__.py  antenna_wifi.service  antenna_wifi.sh  gopigo3_power.py  install_power_service.py  install_trixie.sh
Software/Python/mock_package/: distance_sensor.py
Software/Python/mutex_tests/: test_distance_sensor.py  test_distance_sensor_2.py  test_heavy_mutex.py  test_mutex.py  test_sensor_mutex.py
Software/Python/tests/: test_distance_sensor.py  test_distance_sensor_2.py  test_heavy_mutex_2.py
Software/Scratch/: GoPiGo3Scratch.py  Local_Scratch_Start.desktop  readme.md  start_local_scratch.sh  test_GoPiGo3Scratch.py
Troubleshooting/: README.md  all_tests.sh  hardware_and_firmware_test.sh
docs/: Makefile  make.bat
docs/source/: about.rst  api-advanced.rst  api-basic.rst  api-reference.rst  apiref.rst  conf.py  devguide.rst  faq.rst  index.rst  quickstart.rst  tut-advanced.rst  tut-basic.rst  tutorials.rst
(+92 files in other folders)
